--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -25,16 +25,16 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://dungeon.tscn", "res://mind.tscn")
-current_scene="res://mind.tscn"
+open_scenes=PackedStringArray("res://dungeon.tscn", "res://player.tscn")
+current_scene="res://player.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://player.gd"]
+selected_script="res://player.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
