got the player instantiating

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -10,15 +10,15 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-270
+dock_hsplit_3=-377
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://prefabs/player.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://prefabs/", "res://maps/")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/player_manager.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://prefabs/", "res://maps/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -26,7 +26,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://maps/dungeon.tscn", "res://prefabs/player.tscn", "res://maps/mind.tscn")
-current_scene="res://maps/mind.tscn"
+current_scene="res://maps/dungeon.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
@@ -34,8 +34,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://player.gd"]
-selected_script="res://player.gd"
+open_scripts=["res://player.gd", "res://scripts/player_manager.gd"]
+selected_script="res://scripts/player_manager.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
