--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,4 +1,4 @@
-[res://player.gd]
+[res://scripts/player.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -6,13 +6,17 @@ state={
 "column": 36,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 25,
-"scroll_position": 11.0,
-"selection": false,
+"row": 33,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 33,
 "syntax_highlighter": "GDScript"
 }
 
-[res://maps/camera_pan.gd]
+[res://scripts/camera_pan.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
