--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://maps/mind.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://prefabs/", "res://maps/")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/managers/gameManager.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/managers/", "res://scripts/handlers/", "res://prefabs/", "res://maps/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -26,7 +26,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://maps/dungeon.tscn", "res://prefabs/player.tscn", "res://maps/mind.tscn")
-current_scene="res://prefabs/player.tscn"
+current_scene="res://maps/mind.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -34,8 +34,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://maps/camera_pan.gd", "res://player.gd"]
-selected_script="res://player.gd"
+open_scripts=["res://scripts/handlers/camera_pan.gd", "res://scripts/managers/gameManager.gd", "res://scripts/managers/player.gd"]
+selected_script="res://scripts/managers/player.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
@@ -47,3 +47,13 @@ open_shaders=[]
 split_offset=0
 selected_shader=""
 text_shader_zoom_factor=1.0
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
