--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,35 +17,35 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/camera_pan.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://prefabs/", "res://materials/", "res://maps/")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/player.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://shaders/", "res://scripts/", "res://prefabs/", "res://materials/", "res://maps/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://maps/dungeon.tscn", "res://prefabs/player.tscn", "res://maps/mind.tscn")
+open_scenes=PackedStringArray("res://maps/dungeon.tscn", "res://maps/mind.tscn", "res://prefabs/bullet.tscn", "res://prefabs/player.tscn")
 current_scene="res://maps/dungeon.tscn"
-center_split_offset=-401
-selected_default_debugger_tab_idx=0
+center_split_offset=-300
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/camera_pan.gd", "res://scripts/player.gd"]
-selected_script="res://scripts/camera_pan.gd"
+open_scripts=["res://scripts/bullet.gd", "res://scripts/camera_pan.gd", "res://scripts/gun.gd", "res://scripts/player.gd"]
+selected_script="res://scripts/bullet.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
-zoom_factor=1.1875
+zoom_factor=1.125
 
 [ShaderEditor]
 
-open_shaders=["res://shaders/cyberDungeon.gdshader"]
+open_shaders=["res://shaders/cyberground.gdshader", "res://shaders/cyber_dungeon.gdshader"]
 split_offset=0
-selected_shader="res://shaders/cyberDungeon.gdshader"
+selected_shader="res://shaders/cyber_dungeon.gdshader"
 text_shader_zoom_factor=1.0
 
 [editor_log]
