--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 13,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 33,
-"scroll_position": 0.0,
+"row": 19,
+"scroll_position": 4.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -26,29 +26,29 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://scripts/managers/gameManager.gd]
+[res://scripts/gun.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 42,
+"column": 59,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 13,
-"scroll_position": 0.0,
+"row": 24,
+"scroll_position": 2.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://scripts/managers/player.gd]
+[res://scripts/bullet.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 58,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 18,
+"row": 10,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
