--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -27,19 +27,19 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://maps/dungeon.tscn", "res://maps/mind.tscn", "res://prefabs/bullet.tscn", "res://prefabs/player.tscn")
 current_scene="res://maps/dungeon.tscn"
-center_split_offset=-300
+center_split_offset=-588
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
 open_scripts=["res://scripts/bullet.gd", "res://scripts/camera_pan.gd", "res://scripts/gun.gd", "res://scripts/player.gd"]
-selected_script="res://scripts/bullet.gd"
+selected_script="res://scripts/gun.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
-zoom_factor=1.125
+zoom_factor=1.0625
 
 [ShaderEditor]
 
