--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -10,42 +10,42 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-532
+dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/player.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://shaders/", "res://scripts/", "res://prefabs/", "res://materials/", "res://maps/")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/models/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://prefabs/", "res://maps/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://maps/dungeon.tscn", "res://maps/mind.tscn", "res://prefabs/bullet.tscn", "res://prefabs/player.tscn")
-current_scene="res://maps/dungeon.tscn"
-center_split_offset=-588
-selected_default_debugger_tab_idx=1
+open_scenes=PackedStringArray("res://maps/dungeon.tscn", "res://prefabs/player.tscn", "res://maps/mind.tscn", "res://materials/mob.tscn")
+current_scene="res://prefabs/player.tscn"
+center_split_offset=0
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/bullet.gd", "res://scripts/camera_pan.gd", "res://scripts/gun.gd", "res://scripts/player.gd"]
-selected_script="res://scripts/gun.gd"
+open_scripts=["res://scripts/handlers/camera_pan.gd", "res://scripts/managers/gameManager.gd", "res://scripts/models/player.gd"]
+selected_script="res://scripts/handlers/camera_pan.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
-zoom_factor=1.0625
+zoom_factor=1.1875
 
 [ShaderEditor]
 
-open_shaders=["res://shaders/cyberground.gdshader", "res://shaders/cyber_dungeon.gdshader"]
+open_shaders=[]
 split_offset=0
-selected_shader="res://shaders/cyber_dungeon.gdshader"
+selected_shader=""
 text_shader_zoom_factor=1.0
 
 [editor_log]
