--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,4 +1,18 @@
-[res://scripts/player.gd]
+[res://scripts/handlers/camera_pan.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 42,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 19,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/managers/gameManager.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -6,50 +20,22 @@ state={
 "column": 13,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 19,
-"scroll_position": 4.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://scripts/camera_pan.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 19,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 7,
+"row": 4,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://scripts/gun.gd]
+[res://scripts/models/player.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 35,
+"column": 34,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://scripts/bullet.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 58,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 11,
-"scroll_position": 0.0,
+"row": 5,
+"scroll_position": 6.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
